Fixed scrolling/whitespace issue, reconfigured locations of various components

--- a/src/components/Printing/QuizzesDisplay.css
+++ b/src/components/Printing/QuizzesDisplay.css
@@ -26,20 +26,24 @@
 
 .quizzes-tree {
     position: relative;
-    top: -1100px;
-    left: 120px;
-    padding-top: -10rem;
-    /*transform: translate(-50%, -50%);*/
-}
-
-.download-button-pdf {
-    position: relative;
-    top: -1025px;
+    top: 50px;
     left: 100px;
+    /*padding-top: -10rem;*/
+    overflow: hidden;
+    /*transform: translate(-50%, -50%);*/
 }
 
 .free-response {
     position: relative;
-    top: -1025px;
+    top: 75px;
+    left: 100px;
+    overflow: hidden;
+}
+
+.download-button-pdf {
+    position: relative;
+    overflow: hidden;
+    top: 100px;
     left: 100px;
 }
+
