--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,7 +1,8 @@
 .sidebar {
     /*width: 100%;*/
-    height: 100vh;
-    overflow: hidden;
+    float: left;
+    height: 150vh;
+    /*overflow: hidden;*/
     position: sticky;
     top: 0;
 }
